feat: improve navigation runtime and camera control